==> adafruit/Adafruit-PN532/Adafruit_PN532.cpp <==
 #include "Arduino.h"
 #include "WProgram.h"
#include <Wire.h>
 #define WIRE Wire
 #define WIRE Wire1
#include <SPI.h>
#include "Adafruit_PN532.h"
#define PN532_SPI_SETTING SPISettings(1000000, LSBFIRST, SPI_MODE0)
#define PN532_SPI_CLOCKDIV SPI_CLOCK_DIV16
#define PN532_PACKBUFFSIZ 64
    #define _BV(bit) (1<<(bit))

void Adafruit_PN532::begin() {
  if (_usingSPI) {
    // SPI initialization
    if (_hardwareSPI) {
      SPI.begin();
      SPI.setDataMode(SPI_MODE0);
      SPI.setBitOrder(LSBFIRST);
      SPI.setClockDivider(PN532_SPI_CLOCKDIV);
  
      #ifdef SPI_HAS_TRANSACTION
        SPI.beginTransaction(PN532_SPI_SETTING);
      #endif
    }
    digitalWrite(_ss, LOW);
    
    delay(1000);

    // not exactly sure why but we have to send a dummy command to get synced up
    pn532_packetbuffer[0] = PN532_COMMAND_GETFIRMWAREVERSION;
    sendCommandCheckAck(pn532_packetbuffer, 1);

    // ignore response!

    digitalWrite(_ss, HIGH);
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.endTransaction();
    #endif
  }
  else {
    // I2C initialization.
    WIRE.begin();

    // Reset the PN532  
    digitalWrite(_reset, HIGH);
    digitalWrite(_reset, LOW);
    delay(400);
    digitalWrite(_reset, HIGH);
  }
}

bool Adafruit_PN532::sendCommandCheckAck(uint8_t *cmd, uint8_t cmdlen, uint16_t timeout) {
  uint16_t timer = 0;
  
  // write the command
  writecommand(cmd, cmdlen);
  
  // Wait for chip to say its ready!
  if (!waitready(timeout)) {
    return false;
  }

  #ifdef PN532DEBUG
    if (!_usingSPI) {
      Serial.println(F("IRQ received"));
    }
  #endif
  
  // read acknowledgement
  if (!readack()) {
    #ifdef PN532DEBUG
      Serial.println(F("No ACK frame received!"));
    #endif
    return false;
  }

  // For SPI only wait for the chip to be ready again.
  // This is unnecessary with I2C.
  if (_usingSPI) {
    if (!waitready(timeout)) {
      return false;
    }
  }
  
  return true; // ack'd command
}

void Adafruit_PN532::spi_write(uint8_t c) {
  if (_hardwareSPI) {
    // Hardware SPI write.
    SPI.transfer(c);
  }
  else {
    // Software SPI write.
    int8_t i;
    digitalWrite(_clk, HIGH);

    for (i=0; i<8; i++) {
      digitalWrite(_clk, LOW);
      if (c & _BV(i)) {
        digitalWrite(_mosi, HIGH);
      } else {
        digitalWrite(_mosi, LOW);
      }    
      digitalWrite(_clk, HIGH);
    }
  }
}

uint8_t Adafruit_PN532::spi_read(void) {
  int8_t i, x;
  x = 0;

  if (_hardwareSPI) {
    // Hardware SPI read.
    x = SPI.transfer(0x00);
  }
  else {
    // Software SPI read.
    digitalWrite(_clk, HIGH);

    for (i=0; i<8; i++) {
      if (digitalRead(_miso)) {
        x |= _BV(i);
      }
      digitalWrite(_clk, LOW);
      digitalWrite(_clk, HIGH);
    }
  }

  return x;
}
